test/files/invalid/bad_attributes_struct.fbs
struct Foo (
  force_align, force_align: 1, force_align: "", force_align: [],
  bit_flags, bit_flags: 1, bit_flags: "", bit_flags: [],
  csharp_partial, csharp_partial: 1, csharp_partial: "", csharp_partial: [],
  private, private: 1, private: "", private: [],
  native_type, native_type: 1, native_type: "", native_type: [],
  native_type_pack_name, native_type_pack_name: 1, native_type_pack_name: "", native_type_pack_name: [],
  original_order, original_order: 1, original_order: "", original_order: [],
  required, required: 1, required: "", required: [],
  deprecated, deprecated: 1, deprecated: "", deprecated: [],
  key, key: 1, key: "", key: [],
  shared, shared: 1, shared: "", shared: [],
  nested_flatbuffer, nested_flatbuffer: 1, nested_flatbuffer: "", nested_flatbuffer: [],
  id, id: 1, id: "", id: [],
  hash, hash: 1, hash: "", hash: [],
  cpp_type, cpp_type: 1, cpp_type: "", cpp_type: [],
  cpp_ptr_type, cpp_ptr_type: 1, cpp_ptr_type: "", cpp_ptr_type: [],
  cpp_ptr_type_get, cpp_ptr_type_get: 1, cpp_ptr_type_get: "", cpp_ptr_type_get: [],
  cpp_str_type, cpp_str_type: 1, cpp_str_type: "", cpp_str_type: [],
  cpp_str_flex_ctor, cpp_str_flex_ctor: 1, cpp_str_flex_ctor: "", cpp_str_flex_ctor: [],
  native_inline, native_inline: 1, native_inline: "", native_inline: [],
  native_default, native_default: 1, native_default: "", native_default: [],
  flexbuffer, flexbuffer: 1, flexbuffer: "", flexbuffer: [],
  streaming, streaming: 1, streaming: "", streaming: [],
  idempotent, idempotent: 1, idempotent: "", idempotent: [],
  blabla, blabla: 1, blabla: "", blabla: [],
) {
  x: uint8;
}